# txtr

./: LICENSE  main.py  pyproject.toml
static/: sample.txt
